terraform/modules/infra/01-vpc.tf
## Criando a VPC (Virtual Private Cloud)
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr

  tags = {
    "Name" = "main"
  }
}
